# tiny_tracer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp
core/impl/: bmp.cpp
core/public/: bmp.h
engine/: CMakeLists.txt
engine/impl/: color.cpp
engine/impl/bmp/: bmp.cpp
engine/public/: color.h
engine/public/bmp/: bmp.h  bmp_file_header.h  bmp_info_header.h  rgb.h
engine/public/io/: filesystem.h
py/: __init__.py  path_tracer.py  readme.md
src/impl/: wrappers.cpp
src/public/: wrappers.h
test/: CMakeLists.txt  test1.cpp  test_main.cpp
tests/: CMakeLists.txt  main_test.cpp
